de.kit.tva.lost/src/de/kit/tva/lost/models/LOSTParser.java
package de.kit.tva.lost.models;

// Generated from LOST.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import de.kit.tva.lost.interfaces.LOSTListener;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LOSTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__26=1, T__25=2, T__24=3, T__23=4, T__22=5, T__21=6, T__20=7, T__19=8, 
		T__18=9, T__17=10, T__16=11, T__15=12, T__14=13, T__13=14, T__12=15, T__11=16, 
		T__10=17, T__9=18, T__8=19, T__7=20, T__6=21, T__5=22, T__4=23, T__3=24, 
		T__2=25, T__1=26, T__0=27, WS=28, NL=29, OP=30, ID=31;
	public static final String[] tokenNames = {
		"<INVALID>", "'post:'", "'intm:'", "'var:'", "'{'", "';'", "'Renaming'", 
		"'}'", "'()'", "'R:'", "'guard:'", "'C('", "'B('", "'O:'", "'('", "'pre:'", 
		"','", "'Vars'", "'M:'", "'inv:'", "'\t'", "'S('", "'L('", "'skip'", "'name:'", 
		"'F'", "'GlobalConditions'", "')'", "WS", "'\n'", "OP", "ID"
	};
	public static final int
		RULE_program = 0, RULE_initializer = 1, RULE_vars = 2, RULE_variable = 3, 
		RULE_globalConditions = 4, RULE_renaming = 5, RULE_renamer = 6, RULE_formula = 7, 
		RULE_pre = 8, RULE_post = 9, RULE_intm = 10, RULE_condition = 11, RULE_quantor = 12, 
		RULE_refinement = 13, RULE_refinementRule = 14, RULE_statement = 15, RULE_javaReturn = 16, 
		RULE_assigner = 17, RULE_composition = 18, RULE_selection = 19, RULE_guards = 20, 
		RULE_repetition = 21, RULE_inv = 22, RULE_guard = 23, RULE_var = 24, RULE_returnS = 25, 
		RULE_originalS = 26, RULE_skipS = 27, RULE_methodCallS = 28, RULE_block = 29, 
		RULE_name = 30, RULE_mlexpr = 31;
	public static final String[] ruleNames = {
		"program", "initializer", "vars", "variable", "globalConditions", "renaming", 
		"renamer", "formula", "pre", "post", "intm", "condition", "quantor", "refinement", 
		"refinementRule", "statement", "javaReturn", "assigner", "composition", 
		"selection", "guards", "repetition", "inv", "guard", "var", "returnS", 
		"originalS", "skipS", "methodCallS", "block", "name", "mlexpr"
	};

	@Override
	public String getGrammarFileName() { return "LOST.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LOSTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LOSTParser.EOF, 0); }
		public List<InitializerContext> initializer() {
			return getRuleContexts(InitializerContext.class);
		}
		public InitializerContext initializer(int i) {
			return getRuleContext(InitializerContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64); initializer();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__10) | (1L << T__2) | (1L << T__1) | (1L << NL))) != 0) );
			setState(69); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitializerContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(LOSTParser.NL); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public GlobalConditionsContext globalConditions() {
			return getRuleContext(GlobalConditionsContext.class,0);
		}
		public TerminalNode NL(int i) {
			return getToken(LOSTParser.NL, i);
		}
		public RenamingContext renaming() {
			return getRuleContext(RenamingContext.class,0);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public InitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initializer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitInitializer(this);
		}
	}

	public final InitializerContext initializer() throws RecognitionException {
		InitializerContext _localctx = new InitializerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_initializer);
		int _la;
		try {
			int _alt;
			setState(123);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(71); match(NL);
					}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(77); formula();
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(78); match(NL);
						}
						} 
					}
					setState(83);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(84); match(NL);
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90); vars();
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(91); match(NL);
						}
						} 
					}
					setState(96);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(97); match(NL);
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(103); globalConditions();
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(104); match(NL);
						}
						} 
					}
					setState(109);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(110); match(NL);
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116); renaming();
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(117); match(NL);
						}
						} 
					}
					setState(122);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(LOSTParser.NL, 0); }
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitVars(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); match(T__10);
			setState(126); match(NL);
			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(127); variable();
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(LOSTParser.NL, 0); }
		public List<TerminalNode> ID() { return getTokens(LOSTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LOSTParser.ID, i);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(T__7);
			setState(133); match(ID);
			setState(134); match(ID);
			setState(135); match(T__22);
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(136); match(NL);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalConditionsContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(LOSTParser.NL); }
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(LOSTParser.NL, i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public GlobalConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalConditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterGlobalConditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitGlobalConditions(this);
		}
	}

	public final GlobalConditionsContext globalConditions() throws RecognitionException {
		GlobalConditionsContext _localctx = new GlobalConditionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_globalConditions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(T__1);
			setState(140); match(NL);
			setState(145); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141); match(T__7);
				setState(142); condition();
				setState(143); match(NL);
				}
				}
				setState(147); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RenamingContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(LOSTParser.NL, 0); }
		public List<RenamerContext> renamer() {
			return getRuleContexts(RenamerContext.class);
		}
		public RenamerContext renamer(int i) {
			return getRuleContext(RenamerContext.class,i);
		}
		public RenamingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_renaming; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterRenaming(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitRenaming(this);
		}
	}

	public final RenamingContext renaming() throws RecognitionException {
		RenamingContext _localctx = new RenamingContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_renaming);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); match(T__21);
			setState(150); match(NL);
			setState(152); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(151); renamer();
				}
				}
				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RenamerContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(LOSTParser.NL, 0); }
		public TerminalNode ID() { return getToken(LOSTParser.ID, 0); }
		public TerminalNode OP() { return getToken(LOSTParser.OP, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public RenamerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_renamer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterRenamer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitRenamer(this);
		}
	}

	public final RenamerContext renamer() throws RecognitionException {
		RenamerContext _localctx = new RenamerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_renamer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); match(T__7);
			setState(157); match(ID);
			setState(158); match(OP);
			setState(159); condition();
			setState(161);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(160); match(NL);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(LOSTParser.NL, 0); }
		public PreContext pre() {
			return getRuleContext(PreContext.class,0);
		}
		public PostContext post() {
			return getRuleContext(PostContext.class,0);
		}
		public RefinementContext refinement() {
			return getRuleContext(RefinementContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); match(T__2);
			setState(164); match(T__13);
			setState(165); pre();
			setState(166); match(T__11);
			setState(167); post();
			setState(168); match(T__0);
			setState(169); match(NL);
			setState(170); refinement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public PreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterPre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitPre(this);
		}
	}

	public final PreContext pre() throws RecognitionException {
		PreContext _localctx = new PreContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pre);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172); match(T__12);
			setState(173); condition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public PostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_post; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterPost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitPost(this);
		}
	}

	public final PostContext post() throws RecognitionException {
		PostContext _localctx = new PostContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_post);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); match(T__26);
			setState(176); condition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntmContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public IntmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterIntm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitIntm(this);
		}
	}

	public final IntmContext intm() throws RecognitionException {
		IntmContext _localctx = new IntmContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_intm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178); match(T__25);
			setState(179); condition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public QuantorContext quantor() {
			return getRuleContext(QuantorContext.class,0);
		}
		public TerminalNode ID() { return getToken(LOSTParser.ID, 0); }
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode OP() { return getToken(LOSTParser.OP, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condition);
		try {
			setState(197);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(181); match(T__13);
				setState(182); condition();
				setState(183); match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(185); match(T__13);
				setState(186); condition();
				setState(187); match(T__0);
				setState(188); match(OP);
				setState(189); condition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(191); quantor();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(192); match(ID);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(193); match(ID);
				setState(194); condition();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(195); match(OP);
				setState(196); condition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuantorContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LOSTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LOSTParser.ID, i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public QuantorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterQuantor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitQuantor(this);
		}
	}

	public final QuantorContext quantor() throws RecognitionException {
		QuantorContext _localctx = new QuantorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_quantor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199); match(ID);
			setState(200); match(T__13);
			setState(201); match(ID);
			setState(202); match(ID);
			setState(203); match(T__22);
			setState(204); condition();
			setState(205); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RefinementContext extends ParserRuleContext {
		public RefinementRuleContext refinementRule() {
			return getRuleContext(RefinementRuleContext.class,0);
		}
		public RefinementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_refinement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterRefinement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitRefinement(this);
		}
	}

	public final RefinementContext refinement() throws RecognitionException {
		RefinementContext _localctx = new RefinementContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_refinement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(207); match(T__7);
				}
				}
				setState(210); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 );
			setState(212); refinementRule();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RefinementRuleContext extends ParserRuleContext {
		public CompositionContext composition() {
			return getRuleContext(CompositionContext.class,0);
		}
		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class,0);
		}
		public SkipSContext skipS() {
			return getRuleContext(SkipSContext.class,0);
		}
		public OriginalSContext originalS() {
			return getRuleContext(OriginalSContext.class,0);
		}
		public MlexprContext mlexpr() {
			return getRuleContext(MlexprContext.class,0);
		}
		public MethodCallSContext methodCallS() {
			return getRuleContext(MethodCallSContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ReturnSContext returnS() {
			return getRuleContext(ReturnSContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public RepetitionContext repetition() {
			return getRuleContext(RepetitionContext.class,0);
		}
		public RefinementRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_refinementRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterRefinementRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitRefinementRule(this);
		}
	}

	public final RefinementRuleContext refinementRule() throws RecognitionException {
		RefinementRuleContext _localctx = new RefinementRuleContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_refinementRule);
		try {
			setState(224);
			switch (_input.LA(1)) {
			case T__13:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(214); statement();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(215); composition();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(216); selection();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(217); repetition();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 5);
				{
				setState(218); returnS();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(219); originalS();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 7);
				{
				setState(220); skipS();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 8);
				{
				setState(221); methodCallS();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 9);
				{
				setState(222); block();
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 10);
				{
				setState(223); mlexpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(LOSTParser.NL, 0); }
		public TerminalNode ID() { return getToken(LOSTParser.ID, 0); }
		public TerminalNode OP() { return getToken(LOSTParser.OP, 0); }
		public AssignerContext assigner() {
			return getRuleContext(AssignerContext.class,0);
		}
		public JavaReturnContext javaReturn() {
			return getRuleContext(JavaReturnContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LOSTListener ) ((LOSTListener)listener).exitStatement(this);
		}
	}
